# derive-mmio

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: array.rs  basic.rs  inner_block.rs
examples/no_std/: Cargo.toml
examples/no_std/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
mmio/: Cargo.toml
mmio/src/: lib.rs
src/: lib.rs  main.rs
tests/: array_fields.rs  basic.rs  constness.rs  derives_debug.rs  experiments.rs  inner_mmio.rs  inner_mmio_array.rs  no_ctors.rs  sendable.rs  tests.rs
tests/cases/: bad_inner_attr.stderr  bad_outer_attr.rs  bad_outer_attr.stderr  basic.rs  cant_fake_inner_block.stderr  inner_mmio_double_borrow.stderr  no_ctors.rs  padding_forbidden.stderr  read_only.stderr  repr_c_mandatory.rs  repr_c_mandatory.stderr
tests/no_compile/: array_safe_unchecked.rs  array_safe_unchecked.stderr  bad_inner_attr.rs  bad_inner_attr.stderr  bad_outer_attr.rs  bad_outer_attr.stderr  cant_fake_inner_block.rs  cant_fake_inner_block.stderr  double_read.rs  double_read.stderr  duplicate_field_attr.rs  duplicate_field_attr.stderr  inner_array_invalid_type.rs  inner_array_invalid_type.stderr  inner_array_safe_unchecked.rs  inner_array_safe_unchecked.stderr  inner_mmio_double_borrow.rs  inner_mmio_double_borrow.stderr  inner_only_shared.rs  inner_only_shared.stderr  modify_standalone.rs  modify_standalone.stderr  modify_without_read.rs  modify_without_read.stderr  modify_without_write.rs  modify_without_write.stderr  no_modify.rs  no_modify.stderr  padding_forbidden.rs  padding_forbidden.stderr  read_only.rs  read_only.stderr  repr_c_mandatory.stderr  unimpl_send.rs  unimpl_send.stderr
