[package]
authors = [ "Jonathan Pallant <jonathan.pallant@ferrous-systems.com>" ]
categories = [ "embedded" ]
description = "A mechanism for making it easier to access MMIO peripherals"
edition = "2021"
keywords = [ "knurling", "mmio", "register", "derive"]
license = "MIT OR Apache-2.0"
name = "derive-mmio"
readme = "README.md"
repository = "https://github.com/knurling-rs/derive-mmio"
rust-version = "1.70"
version = "0.3.0"

[dependencies]
derive-mmio-macro = { version = "=0.3.0", path = "./macro" }

[dev-dependencies]
trybuild = "1"
