[package]
authors = [ "Jonathan Pallant <jonathan.pallant@ferrous-systems.com>" ]
categories = [ "embedded" ]
description = "The proc-macro for derive-mmio"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "derive-mmio-macro"
readme = "../README.md"
repository = "https://github.com/knurling-rs/derive-mmio"
version = "0.3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
